--- a/pom.xml
+++ b/pom.xml
@@ -6,37 +6,43 @@
 	<artifactId>selenium-cucumber</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
+<properties>
+		<java.version>1.8</java.version>
+		<maven.compiler.version>3.7.0</maven.compiler.version>
+		<cucumber.version>6.9.1</cucumber.version>
+		<selenium.version>4.0.0-alpha-3</selenium.version>
+	</properties>
 	<dependencies>
 
 		<dependency>
 			<groupId>io.cucumber</groupId>
 			<artifactId>cucumber-java</artifactId>
-			<version>5.7.0</version>
+			<version>${cucumber.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>io.cucumber</groupId>
 			<artifactId>cucumber-testng</artifactId>
-			<version>5.7.0</version>
+			<version>${cucumber.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>io.cucumber</groupId>
 			<artifactId>cucumber-junit</artifactId>
-			<version>5.7.0</version>
+			<version>${cucumber.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>io.cucumber</groupId>
 			<artifactId>cucumber-picocontainer</artifactId>
-			<version>5.7.0</version>
+			<version>${cucumber.version}</version>
 			<scope>test</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>io.cucumber</groupId>
 			<artifactId>cucumber-core</artifactId>
-			<version>5.7.0</version>
+			<version>${cucumber.version}</version>
 		</dependency>
 
 		<dependency>
