Latest code with modifications

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,4 +1,4 @@
 browser = chrome
-basURL = http://automationpractice.com/
+basURL = http://www.automationpractice.pl/index.php
 userName = automationpractice@gmail.com
 password = Automation@9
