--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,10 @@
 	<version>0.0.1-SNAPSHOT</version>
 
 <properties>
-		<java.version>1.8</java.version>
-		<maven.compiler.version>3.7.0</maven.compiler.version>
-		<cucumber.version>6.9.1</cucumber.version>
-		<selenium.version>4.0.0-alpha-3</selenium.version>
+		<java.version>21.0.2</java.version>
+		<maven.compiler.version>3.11.0</maven.compiler.version>
+		<cucumber.version>7.15.0</cucumber.version>
+		<selenium.version>4.17.0</selenium.version>
 	</properties>
 	<dependencies>
 
@@ -48,13 +48,13 @@
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
-			<version>4.0.0-alpha-3</version>
+			<version>${selenium.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-chrome-driver</artifactId>
-			<version>4.0.0-alpha-3</version>
+			<version>${selenium.version}</version>
 		</dependency>
 
 		<dependency>
@@ -69,12 +69,7 @@
 			<version>4.3.1</version>
 		</dependency>
 
-		<dependency>
-			<groupId>tech.grasshopper</groupId>
-			<artifactId>extentreports-cucumber6-adapter</artifactId>
-			<version>2.5.0</version>
-			<scope>test</scope>
-		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -83,7 +78,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.1</version>
+				<version>3.11.0</version>
 				<configuration>
 					<source>10</source>
 					<target>10</target>
